[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Kunal Mandalia <kunal.v.mandalia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
